<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.carapaceproxy</groupId>
    <artifactId>carapace-parent</artifactId>
    <version>1.10.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>carapace-server</module>
        <module>carapace-ui</module>
    </modules>
    <name>Carapace :: Parent</name>
    <description>A Distributed Java Reverse Proxy</description>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <url>https://github.com/diennea/carapaceproxy.git</url>
        <connection>scm:git:https://github.com/diennea/carapaceproxy.git</connection>
        <developerConnection>scm:git:https://github.com/diennea/carapaceproxy.git</developerConnection>
        <tag>release/1.3</tag>
    </scm>
    <developers>
        <developer>
            <id>eolivelli</id>
            <name>Enrico Olivelli</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>nicolo.boschi</id>
            <name>Nicolo Boschi</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>paolo.venturi</id>
            <name>Paolo Venturi</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>francesco.caliumi</id>
            <name>Francesco Caliumi</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>dennis.mercuriali</id>
            <name>Dennis Mercuriali</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>matteo.minardi</id>
            <name>Matteo Minardi</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>hamado.dene</id>
            <name>Hamado Dene</name>
            <organization>Diennea</organization>
        </developer>
        <developer>
            <id>alessandro.luccaroni</id>
            <name>Alessandro Luccaroni</name>
            <organization>Diennea</organization>
        </developer>
    </developers>
    <build>
        <plugins>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${plugins.spotbugsmaven}</version>
                <configuration>
                    <effort>Max</effort>
                    <maxHeap>4096</maxHeap>
                    <fork>true</fork>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>${libs.asm}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <reuseForks>false</reuseForks>
                    <trimStackTrace>false</trimStackTrace>
                    <argLine>
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.io=ALL-UNNAMED
                        --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.logging/java.util.logging=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <javacc-maven-plugin.version>2.4</javacc-maven-plugin.version>

        <libs.projectreactor>2020.0.23</libs.projectreactor>
        <libs.netty.ssl>2.0.54.Final</libs.netty.ssl>
        <libs.acme4j>2.12</libs.acme4j>
        <libs.bouncycastle>1.70</libs.bouncycastle>
        <libs.awssdk>2.17.113</libs.awssdk>
        <libs.caffeine>3.0.5</libs.caffeine>
        <libs.antlr>4.3.1</libs.antlr>

        <libs.zookkeeper>3.7.0</libs.zookkeeper>
        <libs.curator>5.2.0</libs.curator>
        <libs.prometheus>0.14.1</libs.prometheus>
        <libs.prometheus.metrics>4.14.4</libs.prometheus.metrics>
        <libs.micrometer>1.8.2</libs.micrometer>
        <libs.herddb>0.26.1</libs.herddb>

        <libs.commons.lang3>3.12.0</libs.commons.lang3>
        <libs.commons-pool2>2.11.1</libs.commons-pool2>
        <libs.commons-io>2.11.0</libs.commons-io>

        <libs.jetty>9.4.44.v20210927</libs.jetty>
        <libs.jersey>2.35</libs.jersey>
        <libs.jackson>2.13.1</libs.jackson>
        <libs.jaxws.jaxb-api>2.3.1</libs.jaxws.jaxb-api>
        <libs.jaxws.jaxb-impl>3.0.2</libs.jaxws.jaxb-impl>
        <libs.javaxactivation-api>1.2.0</libs.javaxactivation-api>
        <libs.slf4j>1.7.33</libs.slf4j>
        <libs.guava>31.0.1-jre</libs.guava>
        <libs.lombok>1.18.22</libs.lombok>
        <libs.spotbugsannotations>4.5.3</libs.spotbugsannotations>

        <!-- test dependecies -->
        <libs.junit>4.13.2</libs.junit>
        <libs.junitparams>1.1.1</libs.junitparams>
        <libs.wiremock>2.35.0</libs.wiremock>
        <libs.powermock>2.0.9</libs.powermock>
        <libs.mockito>3.12.4</libs.mockito>
        <libs.hamcrest>2.2</libs.hamcrest>

        <plugins.spotbugsmaven>4.5.3.0</plugins.spotbugsmaven>
        <libs.asm>9.2</libs.asm>
    </properties>
    <repositories>
        <repository>
            <id>apache-snapshots</id>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <url>https://repository.apache.org/snapshots/</url>
        </repository>
        <repository>
            <id>dev.majordodo.org.snapshots</id>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <url>https://dev.majordodo.org/nexus/content/repositories/snapshots/</url>
        </repository>
    </repositories>

</project>
